--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fallen Angel</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background-image: url('./fondo.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+        }
+    </style>
 </head>
 <body>
-    <h1>Bienvenido a mi página</h1>
+    <h1 style="color: white; text-align: center; padding-top: 50px;">¡Funciona!</h1>
 </body>
 </html>
