--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Fallen Angel</title>
     <style>
         body {
-            background-image: url('./fondo.png');
+            background-image: url('./images/fondoo.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
