--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fallen Angel</title>
     <style>
+@font-face {
+  font-family: 'GothicFrame';
+  src: url('Pinyon_Script (1).zip') format('truetype');
+}
         body {
             background-image: url('./images/fondoo.png');
             background-size: cover;
@@ -18,6 +22,6 @@
     </style>
 </head>
 <body>
-    <h1 style="color: white; text-align: center; padding-top: 50px;">¡Funciona!</h1>
+    <h1 style="color: white; text-align: center; padding-top: 50px; font-family: 'GothicFrame';">¡Funciona!</h1>
 </body>
 </html>
