Fix font source path in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
 @font-face {
   font-family: 'GothicFrame';
-  src: url('Pinyon_Script (1).zip') format('truetype');
+  src: url('./Pinyon_Script (1).zip') format('truetype');
 }
         body {
             background-image: url('./images/fondoo.png');
