--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fallen Angel</title>
 </head>
+<style>
+    @font-face {
+  font-family: 'GothicFrame';
+  src: url('./Pinyon_Script (1).zip') format('truetype');
+}
+        body {
+            background-image: url('./images/fondoo.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+        }
+</style>    
 <body>
     <h1 style="color: white; text-align: center; padding-top: 50px; font-family: 'GothicFrame';">¡Funciona!</h1>
 </body>
