--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
     @font-face {
   font-family: 'GothicFrame';
-  src: url('./Pinyon_Script (1).zip') format('truetype');
+  src: url('./PinyonScript-Regular.ttf') format('truetype');
 }
         body {
             background-image: url('./images/fondoo.png');
