--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
         }
 </style>    
 <body>
-    <h1 style="color: white; text-align: center; padding-top: 50px; font-family: 'GothicFrame';">¡Funciona!</h1>
+    <h1 style="color: white; text-align: center; padding-top: 40px; font-family: 'GothicFrame';">Bienvenido</h1>
 </body>
 </html>
