--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background-image: url('./images/fondoo.png');
             background-size: cover;
             background-position: center;
-            background-repeat: no-repeat;
+            background-repeat: yes-repeat;
             background-attachment: fixed;
             margin: 0;
             padding: 0;
