--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <style>
     @font-face {
   font-family: 'GothicFrame';
-  src: url('./PinyonScript-Regular.ttf') format('truetype');
+  src: url('./Cookie-Regular.ttf') format('truetype');
 }
         body {
             background-image: url('./images/fondoo.png');
             background-size: cover;
             background-position: center;
-            background-repeat: yes-repeat;
+            background-repeat: no-repeat;
             background-attachment: fixed;
             margin: 0;
             padding: 0;
