--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <link rel="icon" href="img/lazo.png">
+       <link rel="icon" href="img/lazow.png">
     <title>𝄞𝄢 Silent Paradise ‧˚꒰♬⋆.˚୭ ˚. ᵎᵎ</title>
         <style>
             @font-face {
@@ -12,7 +12,7 @@
             }
 
        body {
-            background-image: url(./img/que.png);
+            background-image: url(./img/quew.png);
             margin: 0;
             padding: 0;
             overflow: hidden;
